--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -4,6 +4,7 @@
              xmlns:viewmodels="clr-namespace:ListenTogether.ViewModels"
              xmlns:services="clr-namespace:ListenTogether.Services"
              xmlns:controls="clr-namespace:ListenTogether.Controls"
+             xmlns:gaussianBlur="clr-namespace:ListenTogether.Handlers.GaussianBlurHandler"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="ListenTogether.Pages.PlayingPage"
              Title="正在播放"
@@ -37,14 +38,12 @@
         <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1" 
                      AbsoluteLayout.LayoutFlags="All" 
                      BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
-            <Image Source="{Binding BackgroundImage, Mode=OneWay, Converter={StaticResource ByteArrayToImageSourceConverter}}"
-                   Opacity="0.3"
-                   HorizontalOptions="FillAndExpand"
-                   VerticalOptions="FillAndExpand"
-                   Aspect="AspectFill">           
-            </Image>
+            <gaussianBlur:GaussianImage Url="{Binding CurrentMusic.ImageUrl}"
+                                        Opacity="0.3"
+                                        HorizontalOptions="FillAndExpand"
+                                        VerticalOptions="FillAndExpand"/>
         </StackLayout>
-
+        
         <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" 
                      Margin="{OnPlatform UWP=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
                      >
