--- a/src/ListenTogether/Pages/SettingsPage.xaml
+++ b/src/ListenTogether/Pages/SettingsPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:ListenTogether.ViewModels"
              xmlns:controls="clr-namespace:ListenTogether.Controls"
+             xmlns:JiuLing="clr-namespace:JiuLing.Controls.Maui.Controls;assembly=JiuLing.Controls.Maui"
              x:Class="ListenTogether.Pages.SettingsPage"
              Title="设置"
              BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
@@ -72,44 +73,43 @@
                         <Label Text="常规"
                                FontAttributes="Bold"/>
 
-                        <controls:SwitchEx Text="启动时检查更新"
+                        <JiuLing:TextSwitch Text="启动时检查更新"
                                        IsToggled="{Binding IsAutoCheckUpdate}">
-                        </controls:SwitchEx>
-                        <controls:SwitchEx Text="深色主题"
-                                       IsToggled="{Binding IsDarkMode}">
-                        </controls:SwitchEx>
+                        </JiuLing:TextSwitch>
+                        <JiuLing:TextSwitch Text="深色主题" IsToggled="{Binding IsDarkMode}">
+                        </JiuLing:TextSwitch>
 
                         <!-- 搜索设置 -->
                         <Label Margin="0,20,0,0"
                                Text="搜索"                               
                                FontAttributes="Bold"/>
-                        <controls:SwitchEx Text="网易云音乐"
+                        <JiuLing:TextSwitch Text="网易云音乐"
                                        IsToggled="{Binding IsEnableNetEase}">
-                        </controls:SwitchEx>
-                        <controls:SwitchEx Text="酷狗音乐"
+                        </JiuLing:TextSwitch>
+                        <JiuLing:TextSwitch Text="酷狗音乐"
                                        IsToggled="{Binding IsEnableKuGou}">
-                        </controls:SwitchEx>
-                        <controls:SwitchEx Text="咪咕音乐"
+                        </JiuLing:TextSwitch>
+                        <JiuLing:TextSwitch Text="咪咕音乐"
                                        IsToggled="{Binding IsEnableMiGu}">
-                        </controls:SwitchEx>
-                        <controls:SwitchEx Text="隐藏小于1分钟的歌曲"
+                        </JiuLing:TextSwitch>
+                        <JiuLing:TextSwitch Text="隐藏小于1分钟的歌曲"
                                        IsToggled="{Binding IsHideShortMusic}">
-                        </controls:SwitchEx>
+                        </JiuLing:TextSwitch>
 
                         <!-- 播放设置 -->
                         <Label Margin="0,20,0,0"
                                Text="播放"                               
                                FontAttributes="Bold"/>
 
-                        <controls:SwitchEx Text="仅在WIFI下播放未缓存的歌曲"
+                        <JiuLing:TextSwitch Text="仅在WIFI下播放未缓存的歌曲"
                                        IsToggled="{Binding IsWifiPlayOnly}">
-                        </controls:SwitchEx>
-                        <controls:SwitchEx Text="播放失败时自动跳到下一首"
+                        </JiuLing:TextSwitch>
+                        <JiuLing:TextSwitch Text="播放失败时自动跳到下一首"
                                        IsToggled="{Binding IsAutoNextWhenFailed}">
-                        </controls:SwitchEx>
-                        <controls:SwitchEx Text="播放我的歌单前清空播放列表"
+                        </JiuLing:TextSwitch>
+                        <JiuLing:TextSwitch Text="播放我的歌单前清空播放列表"
                                        IsToggled="{Binding IsCleanPlaylistWhenPlayMyFavorite}">
-                        </controls:SwitchEx>
+                        </JiuLing:TextSwitch>
                     </StackLayout>
 
                     <!--其它模块-->
